--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
+    "react-spring": "^9.7.2",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
