--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.17",
     "animejs": "^3.2.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -23,9 +24,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-global-hook": "^2.0.0-rc2",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
