--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-global-hook": "^2.0.0-rc2",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
+    "react-typist": "^2.0.5",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3"
   },
