--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Praharshathapa.github.io/portfolio-nextjs",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -7,9 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "lint": "next lint"
+  
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
