--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-    
-  
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -21,7 +19,7 @@
     "eslint-config-next": "13.4.19",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
-    "next": "13.4.19",
+    "next": "^13.5.11",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,10 +28,11 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-scroll": "^1.8.9",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
-    "react-typist": "^2.0.5",
     "sharp": "^0.32.6",
+    "simple-typewriter": "^0.0.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3"
   },
